BUG-DFC-13095 - Exam results helpline | Show message link overlaps information icon on smaller screens
Reduced padding between Show message / Hide message and fixed issue with overlapping Show/Hide message text with main content of banner in national_careers_toolkit

--- a/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
@@ -582,6 +582,8 @@ $mobile: 768px;
        .global-bar-message-container {
          .global-bar__dismiss {
            margin-left:50px;
+           position:relative;
+           padding-top:10px;
          }
        }
      }
